--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "npx eslint",
+    "lint": "npx eslint controllers",
     "start": "node app.js",
     "dev": "nodemon app.js"
   },
@@ -21,14 +21,13 @@
   "homepage": "https://github.com/BadStandUp/express-mesto-gha#readme",
   "devDependencies": {
     "eslint": "^8.38.0",
-    "eslint-plugin-react": "^7.32.2",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.27.5",
     "nodemon": "^2.0.22"
   },
   "dependencies": {
     "body-parser": "^1.20.2",
     "dotenv": "^16.0.3",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.27.5",
     "express": "^4.18.2",
     "mongoose": "^7.0.3"
   }
